[package]
name = "yevefi"
version = "0.3.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "yevefi"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
ahash = "=0.8.4"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "1.16.24"
anchor-spl = {version = "0.29", features = ["metadata", "memo"]}
spl-token = {version = "4", features = ["no-entrypoint"]}
uint = {version = "0.9.1", default-features = false}
borsh09 = {package = "borsh", version = "0.9.1"}
spl-transfer-hook-interface = "0.3.0"
solana-security-txt = { version = "=1.1.1" }

[dev-dependencies]
proptest = "1.0"
serde = "1.0.117"
serde_json = "1.0.59"

[dev-dependencies.serde_with]
version = "1.12.0"
features = ["json"]
